--- a/app/assets/stylesheets/deals.css.erb
+++ b/app/assets/stylesheets/deals.css.erb
@@ -157,8 +157,8 @@
   .codes .card_wrap .card .inner>.code_high>ul>li>ul>li>a{text-decoration:none;color:#08f;}
   .codes .card_wrap .card .inner>.code_high>ul>li>ul>li>span{}
   .codes .card_wrap .card .inner>.code_high>ul>li>ul>li>span>em{font-size:11px;text-decoration:line-through;color:#616161;margin-left:1%;}
-  .codes .card_wrap .card .deal_btn{float:none;width:100%;padding:7px;margin:10px 0;}
-  .codes .card_wrap .card .deal_btn a{text-decoration:none;color:#000;margin:20px 0 0 0;border:3px solid;padding:7px 20px;font-family: 'Montserrat', sans-serif;font-weight:bold;}
+  .codes .card_wrap .card .deal_btn{float:none;width:100%;margin:10px 0;text-align:center;}
+  .codes .card_wrap .card .deal_btn a{text-decoration:none;margin:20px 0 0 0;padding:10px 20px;font-family: 'Montserrat', sans-serif;font-weight:bold;background:#000;color:#fff;display:block;border-radius:10px;}
   .codes .card_wrap .card .deal_btn p{color:#ff3333;margin-top:10px;}
   .codes .rt_cnt .updating{font-size:30px;font-size:20px;font-family: 'Anton', sans-serif;margin-bottom:100px;}
   .codes .rt_cnt .updating a{display:block;text-decoration:none;color:#fff;background:#000;padding:5px 10px;}
