--- a/app/views/deals/_body_promocode.html.erb
+++ b/app/views/deals/_body_promocode.html.erb
@@ -26,6 +26,200 @@
  <p>run out of stock soon</p>
 -->
 
+<div class="card clearfix" data-score="25" data-price="74.25">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2JsAGR8"><img src="https://m.media-amazon.com/images/I/81++H68FAiL._SR400,400_.jpg" alt="" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>141 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>25% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2JsAGR8">Pratt Standard Cocktail Company Old Fashioned Authentic Tonic Syrup for Cocktails, 16oz, Pack of 6 </a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$74.25</span><span class="ori_price">$99.00</span></address>
+      <p><span>Take <strong>25% off at $99.00</strong> with promo code: <strong>25DRINKS</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 16, 2019 at 11:59 PM PDT</span>
+      <%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2JsAGR8">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="70" data-price="12.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/32qX2Kz"><img src="https://m.media-amazon.com/images/I/51WwL8aAo3L._SR400,400_.jpg" alt="AGSDON Women’s Running Sport Sneakers" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>24 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>70% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/32qX2Kz">AGSDON Women’s Running Sport Sneakers, Comfort Breathable Walking Athletic Shoes</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$12.00</span><span class="ori_price">$39.99</span></address>
+      <p><span>Take <strong>70% off at $39.99</strong> with promo code: <strong>70NEM7NQ</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 11, 2019 at 11:59 PM PDT</span>
+      <%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/32qX2Kz">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="20" data-price="26.39">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/30vlpVy"><img src="https://m.media-amazon.com/images/I/61TL5n7SfTL._SR400,400_.jpg" alt="Brondell Bidet" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>1,553 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>20% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/30vlpVy">Brondell Bidet – Thinline Dual Nozzle SimpleSpa SS-250 | Fresh Water Spray |Non-Electric | Bidet Toilet Attachment in White...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$26.39</span><span class="ori_price">$32.99</span></address>
+      <p><span>Take <strong>20% off at $32.99</strong> with promo code: <strong>20SSBRAD</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 17, 2019 at 12:01 AM PDT</span>
+      <%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/30vlpVy">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="40" data-price="47.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/30t5yXn"><img src="https://m.media-amazon.com/images/I/81oDjcexOtL._SR400,400_.jpg" alt="Catry Four-Level Cat Tree" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-5.jpg' %>"><p>2 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>47.99% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/30t5yXn">Catry Four-Level Cat Tree Condo Gray with Natural Sisal Scratching Posts, Teasing Toys, Scratching Pad</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$47.99</span><span class="ori_price">$79.99</span></address>
+      <p><span>Take <strong>47.99% off at $79.99</strong> with promo code: <strong>40H16QCZ</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 11, 2019 at 11:59 PM PDT</span>
+      <%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/30t5yXn">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="10" data-price="20.69">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/30z2aKP"><img src="https://m.media-amazon.com/images/I/61lJgYbMdwL._SR400,400_.jpg" alt="Athletic Shorts" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>426 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>10% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/30z2aKP">Baleaf Men's 5" Running Athletic Shorts Zipper Pocket</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$20.69</span><span class="ori_price">$22.99</span></address>
+      <p><span>Take <strong>10% off at $22.99</strong> with promo code: <strong>10JTTX7S</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 13, 2019 at 11:59 PM PDT</span>
+      <%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/30z2aKP">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="20" data-price="12.79">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2JsbGcN"><img src="https://m.media-amazon.com/images/I/612RHFCF7OL._SR400,400_.jpg" alt="Collapsible Water Bottle" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>29 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>20% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2JsbGcN">SPORFEEL 550ML Silicone Collapsible Water Bottle BPA Free, Sports Camping Canteen Sports Bottles Silicone Portable...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$12.79</span><span class="ori_price">$15.99</span>
+        <div class="tooltip_green"><span>Extra Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p></div></div>
+      </address>
+      <p><span>Take <strong>20% off at $15.99</strong> with promo code: <strong>20HQV5VH</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 14, 2019 at 11:59 PM PDT</span>
+      <%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2JsbGcN">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="30" data-price="50.39">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2LP2gtG"><img src="https://m.media-amazon.com/images/I/613gr76RhpL._SR400,400_.jpg" alt="Electric Cooler" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>12 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>30% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2LP2gtG">Electric Cooler and Warmer Car Refrigerator 26.4 Quart/27 Cans Car Cooler for Road Trip, 12V DC Portable Mini Fridge...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$50.39</span><span class="ori_price">$71.99</span>
+        <div class="tooltip_green"><span>Extra Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p></div></div>
+      </address>
+      <p><span>Take <strong>30% off at $71.99</strong> with promo code: <strong>30IZWN5Q</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 16, 2019 at 11:59 PM PDT</span>
+      <%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2LP2gtG">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="20" data-price="35.96">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Saf9zl"><img src="https://m.media-amazon.com/images/I/81eoZ9yCwJL._SR400,400_.jpg" alt="Whiskey Stones Gift" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-5.jpg' %>"><p>57 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>20% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Saf9zl">Whiskey Stones Gift Set for Men - 8 Chilling Stainless-Steel Whiskey Cubes, 2 Large Classic Glasses...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$35.96</span><span class="ori_price">$44.95</span></address>
+      <p><span>Take <strong>20% off at $44.95</strong> with promo code: <strong>20FROLKOFF</strong></span></p>
+      <span class="ex_date">Expiration Date : Aug 09, 2019 at 11:59 PM PDT</span>
+      <%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2Saf9zl">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="20" data-price="28.68">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2JuNQ0g"><img src="https://m.media-amazon.com/images/I/81t6ot5HxSL._SR400,400_.jpg" alt="SHARDOR Electric Burr Coffee Grinder" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-3_5.jpg' %>"><p>47 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>20% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2JuNQ0g">SHARDOR Electric Burr Coffee Grinder Mill with 12 Adjustable Grinding,Coffee Grinders with 12 Cups,Black</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$28.68</span><span class="ori_price">$35.85</span></address>
+      <p><span>Take <strong>20% off at $35.85</strong> with promo code: <strong>20C58A5C</strong></span></p>
+      <span class="ex_date">Expiration Date : Aug 09, 2019 at 11:59 PM PDT</span>
+      <%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2JuNQ0g">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="60" data-price="13.20">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/30ynOhZ"><img src="https://m.media-amazon.com/images/I/81YASs+fxJL._SR400,400_.jpg" alt="VANCOOL Meal Prep Containers" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>99 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>60% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/30ynOhZ">VANCOOL Meal Prep Containers 3 Compartment with Lids BPA Free Food Storage Bento Style Lunch Boxes for Portion Control...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$13.20</span><span class="ori_price">$32.99</span></address>
+      <p><span>Take <strong>60% off at $32.99</strong> with promo code: <strong>60DQBZQ8</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 12, 2019 at 11:59 PM PDT</span>
+      <%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/30ynOhZ">Use Code at Amazon</a></div>
+</div>
+
 <div class="card clearfix" data-score="20" data-price="7.99">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/2YHIXpD"><img src="https://m.media-amazon.com/images/I/61dSNpbjIrL._SR400,400_.jpg" alt="USB Type C Cable OULUOQI USB " /></a>
