--- a/app/views/deals/_body_bestdeals.html.erb
+++ b/app/views/deals/_body_bestdeals.html.erb
@@ -47,6 +47,91 @@
 <p>run out of stock soon</p>
 -->
 
+<div class="card clearfix" data-score="30" data-price="27.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2O507wL"><img src="https://images-na.ssl-images-amazon.com/images/I/81y4bNaBelL._SX679_.jpg" alt="DOSS SoundBox Bluetooth Speaker" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>13,080 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>30% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2O507wL">DOSS SoundBox Bluetooth Speaker, Portable Wireless Bluetooth 4.0 Touch Speakers with 12W HD Sound and Bold Bass,...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$27.99</span><span class="ori_price">$39.99</span></address>
+      <%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2O507wL">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="53" data-price="18.90">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2XKDzAS"><img src="https://images-na.ssl-images-amazon.com/images/I/810p4fIuvOL._SX522_.jpg" alt="ZAGG InvisibleShield HDX Screen Protector" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>1,126 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>53% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2XKDzAS">ZAGG InvisibleShield HDX Screen Protector - HD Clarity + Extreme Shatter Protection for Apple iPad Pro 9.7 /...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$18.90</span><span class="ori_price">$39.99</span></address>
+      <%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2XKDzAS">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="52" data-price="22.50">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2YQ5oJa"><img src="https://images-na.ssl-images-amazon.com/images/I/81xAyfHxC0L._SX679_.jpg" alt="Cat Litter Box" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>4,957 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>52% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2YQ5oJa">Purina Tidy Cats Breeze Cat Litter Box System</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$22.50</span><span class="ori_price">$46.99</span></address>
+      <%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2YQ5oJa">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="40" data-price="59.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/30nVlLY"><img src="https://images-na.ssl-images-amazon.com/images/I/71c8pLmDerL._UX679_.jpg" alt="American Tourister Moonlight Expandable Hardside Luggage" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>348 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/30nVlLY">American Tourister Moonlight Expandable Hardside Luggage with Spinner Wheels</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$59.99</span><span class="ori_price">$99.99</span></address>
+      <%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/30nVlLY">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="38" data-price="40.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/30u2MB7"><img src="https://images-na.ssl-images-amazon.com/images/I/91NOEJJ2bDL._SX679_.jpg" alt="Travelon Anti-theft Signature Slim Backpack" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>96 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>38% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/30u2MB7">Travelon Anti-theft Signature Slim Backpack, Black</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$40.00</span><span class="ori_price">$65.00</span></address>
+      <%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/30u2MB7">Shop Now at Amazon</a></div>
+</div>
+
 <div class="card dealofday clearfix" data-score="Percentage" data-price="discounted_price">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/2XEAqHr"><img src="https://images-na.ssl-images-amazon.com/images/I/51R88kgEmhL._UX535_.jpg" alt="PRIME DEAL OF THE DAY" /></a>
