--- a/app/views/deals/_body_promocode.html.erb
+++ b/app/views/deals/_body_promocode.html.erb
@@ -14,7 +14,27 @@
       <%= render 'deals/notes' %>
     </div>
   </div> 
-  <div class="deal_btn"><a target="_blank" href="product_link">Use Code at Amazon</a></div>
+  <div class="deal_btn promo_btn"><a target="_blank" href="product_link">Use Code at Amazon</a></div>
+</div>
+ -->
+
+ <!-- <div class="card clearfix" data-score="percentage" data-price="discounted_price">
+  <div class="image_box">
+    <a target="_blank" href="product_link"><img src="product_img" alt="" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-Rating_Num.jpg' %>"><p>Review_Num Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>percentage% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="product_link">prodcut_description</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$discounted_price</span><span class="ori_price">$Origianl_price</span></address>
+      <textarea class="code_area">promo_code</textarea><button class="copycode">Copy</button>
+      <span class="ex_date ex_date_new">Expiration Date : End_date</span>
+      <%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="product_link">Use Code at Amazon</a></div>
 </div>
  -->
 
@@ -573,4 +593,248 @@
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/2LMxuRT">Use Code at Amazon</a></div>
 </div>
+
+<table class="table table-bordered table-striped">
+    <thead>
+      <tr>
+        <th style="width: 40% !important;">English</th>
+        <th style="width: 40%; !important;">Arabic</th>
+        <th style="width: 20%; !important;">Link <button class="btn btn-warning copyAll">Copy All Links</button></th>
+      </tr>
+    </thead>
+    <tbody>
+      
+      <tr>
+        <td>
+          <textarea class="form-control">Financial Accounting Software</textarea>
+          <br />
+          <button class="btn btn-danger">Copy</button>
+        </td>
+        <td dir="rtl">
+          <textarea class="form-control">برنامج محاسبة مالية</textarea>
+          <br />
+          <button class="btn btn-danger">Copy</button>
+        </td>
+        <td rowspan="2">
+          <textarea class="form-control"><a href="https://www.smacc.com/برنامج-محاسبة/برنامج-محاسبة-مالية/">https://www.smacc.com/برنامج-محاسبة/برنامج-محاسبة-مالية/</a></textarea>
+            <br />
+          <button class="btn btn-danger">Copy</button>
+        </td>
+      </tr>
+      <!-- /row end -->
+      
+      <tr>
+        <td>
+          <textarea class="form-control"><a href="https://www.smacc.com/برنامج-محاسبة/برنامج-محاسبة-مالية/">SMACC Financial Accounting Software</a> helps you to manage Payments, Invoices, Receipts, Journal Voucher, Debit & Credit Notes easily.</textarea>
+          <br />
+          <button class="btn btn-primary">Copy</button>
+        </td>
+        <td dir="rtl">
+          <textarea class="form-control">يساعدك نظام <a href="https://www.smacc.com/برنامج-محاسبة/برنامج-محاسبة-مالية/">SMACC</a> للمحاسبة المالية على إدارة المدفوعات ، الفواتير ، الإيصالات ، إيصالات دفتر اليومية ، الملاحظات الدائنة والمدينة بسهولة.</textarea>
+          <br />
+          <button class="btn btn-primary">Copy</button>
+        </td>
+      </tr>
+      <!-- /row end -->
+      
+      <tr>
+        <td>
+          <textarea class="form-control">Fixed Assets Software</textarea>
+          <br />
+          <button class="btn btn-danger">Copy</button>
+        </td>
+        <td dir="rtl">
+          <textarea class="form-control">برنامج الأصول الثابتة</textarea>
+          <br />
+          <button class="btn btn-danger">Copy</button>
+        </td>
+        <td rowspan="2">
+          <textarea class="form-control"><a href="https://www.smacc.com/برنامج-محاسبة/برنامج-الأصول-الثابتة/">https://www.smacc.com/برنامج-محاسبة/برنامج-الأصول-الثابتة/</a></textarea>
+            <br />
+          <button class="btn btn-danger">Copy</button>
+        </td>
+      </tr>
+      <!-- /row end -->
+      
+      <tr>
+        <td>
+          <textarea class="form-control"><a href="https://www.smacc.com/برنامج-محاسبة/برنامج-الأصول-الثابتة/">Fixed Assets Management Software</a> helps you to track and manage your assets easily. Advanced Depreciation Calculation System calculates depreciation automatically.</textarea>
+          <br />
+          <button class="btn btn-primary">Copy</button>
+        </td>
+        <td dir="rtl">
+          <textarea class="form-control">يساعدك <a href="https://www.smacc.com/برنامج-محاسبة/برنامج-محاسبة-مالية/">نظام إدارة الأصول الثابتة</a> على تتبع الأصول الخاصة بك وإدارتها بسهولة. يحسب نظام حساب الاستهلاك المتقدم الاستهلاك تلقائيًا.</textarea>
+          <br />
+          <button class="btn btn-primary">Copy</button>
+        </td>
+      </tr>
+      <!-- /row end -->
+      
+      <tr>
+        <td>
+          <textarea class="form-control">Inventory Management Software</textarea>
+          <br />
+          <button class="btn btn-danger">Copy</button>
+        </td>
+        <td dir="rtl">
+          <textarea class="form-control">برنامج إدارة المخزون</textarea>
+          <br />
+          <button class="btn btn-danger">Copy</button>
+        </td>
+        <td rowspan="2">
+          <textarea class="form-control"><a href="https://www.smacc.com/برنامج-محاسبة/برنامج-إدارة-المخزون">https://www.smacc.com/برنامج-محاسبة/برنامج-إدارة-المخزون</a></textarea>
+            <br />
+          <button class="btn btn-danger">Copy</button>
+        </td>
+      </tr>
+      <!-- /row end -->
+      
+      <tr>
+        <td>
+          <textarea class="form-control"><a href="https://www.smacc.com/برنامج-محاسبة/برنامج-إدارة-المخزون">Inventory Management Software</a> makes it easy for you to manage all your inventory. Track all your stock in warehouses with SMACC's Warehouse Management System.</textarea>
+          <br />
+          <button class="btn btn-primary">Copy</button>
+        </td>
+        <td dir="rtl">
+          <textarea class="form-control"><a href="https://www.smacc.com/برنامج-محاسبة/برنامج-إدارة-المخزون">نظام إدارة المخزون </a> يسهل عليك إدارة جميع المستودعات الخاصة بك. تتبع كل مخزونك في المستودعات بنظام إدارة المخزون. إبدأ النسخة التجريبية الآن</textarea>
+          <br />
+          <button class="btn btn-primary">Copy</button>
+        </td>
+      </tr>
+      <!-- /row end -->
+      
+      <tr>
+        <td>
+          <textarea class="form-control">Human Resource Management</textarea>
+          <br />
+          <button class="btn btn-danger">Copy</button>
+        </td>
+        <td dir="rtl">
+          <textarea class="form-control">نظام إدارة شؤون الموظفين</textarea>
+          <br />
+          <button class="btn btn-danger">Copy</button>
+        </td>
+        <td rowspan="2">
+          <textarea class="form-control"><a href="https://www.smacc.com/برنامج-محاسبة/نظام-إدارة-شؤون-الموظفين/">https://www.smacc.com/برنامج-محاسبة/نظام-إدارة-شؤون-الموظفين/</a></textarea>
+            <br />
+          <button class="btn btn-danger">Copy</button>
+        </td>
+      </tr>
+      <!-- /row end -->
+      
+      <tr>
+        <td>
+          <textarea class="form-control"><a href="https://www.smacc.com/برنامج-محاسبة/نظام-إدارة-شؤون-الموظفين/">Human Resource Management Software</a> covers all administrative essentials to manage employees, employees salaries, vacations, pay slips and deductions.</textarea>
+          <br />
+          <button class="btn btn-primary">Copy</button>
+        </td>
+        <td dir="rtl">
+          <textarea class="form-control">يغطي <a href="https://www.smacc.com/برنامج-محاسبة/نظام-إدارة-شؤون-الموظفين/">نظام إدارة الموارد البشرية</a> جميع الضروريات الإدارية لإدارة الموظفين ، ورواتب الموظفين ، والإجازات ، والرواتب ، والاستقطاعات.يسهل عليك إدارة جميع المستودعات الخاصة بك. تتبع كل مخزونك في المستودعات بنظام إدارة المخزون. إبدأ النسخة التجريبية الآن</textarea>
+          <br />
+          <button class="btn btn-primary">Copy</button>
+        </td>
+      </tr>
+      <!-- /row end -->
+      
+      <tr>
+        <td>
+          <textarea class="form-control">On-premises Accounting Software</textarea>
+          <br />
+          <button class="btn btn-danger">Copy</button>
+        </td>
+        <td dir="rtl">
+          <textarea class="form-control">برامج حسابات</textarea>
+          <br />
+          <button class="btn btn-danger">Copy</button>
+        </td>
+        <td rowspan="2">
+          <textarea class="form-control"><a href="https://www.smacc.com/برامج-حسابات/">https://www.smacc.com/برامج-حسابات/</a></textarea>
+            <br />
+          <button class="btn btn-danger">Copy</button>
+        </td>
+      </tr>
+      <!-- /row end -->
+      
+      <tr>
+        <td>
+          <textarea class="form-control"><a href="https://www.smacc.com/برامج-حسابات/">SMACC 5</a> is the best accounting software in Middle-East with powerful client base in all Middle-Eastern countries</textarea>
+          <br />
+          <button class="btn btn-primary">Copy</button>
+        </td>
+        <td dir="rtl">
+          <textarea class="form-control"><a href="https://www.smacc.com/برامج-حسابات/">SMACC 5</a> هو أفضل نظام محاسبة في الشرق الأوسط مع قاعدة عملاء قوية في جميع دول الشرق الأوسط</textarea>
+          <br />
+          <button class="btn btn-primary">Copy</button>
+        </td>
+      </tr>
+      <!-- /row end -->
+      
+      <tr>
+        <td>
+          <textarea class="form-control">Point of Sale Management</textarea>
+          <br />
+          <button class="btn btn-danger">Copy</button>
+        </td>
+        <td dir="rtl">
+          <textarea class="form-control">برنامج نقاط البيع</textarea>
+          <br />
+          <button class="btn btn-danger">Copy</button>
+        </td>
+        <td rowspan="2">
+          <textarea class="form-control"><a href="https://www.smacc.com/برنامج-محاسبة/برنامج-نقاط-البيع/">https://www.smacc.com/برنامج-محاسبة/برنامج-نقاط-البيع/</a></textarea>
+            <br />
+          <button class="btn btn-danger">Copy</button>
+        </td>
+      </tr>
+      <!-- /row end -->
+      
+      <tr>
+        <td>
+          <textarea class="form-control"><a href="https://www.smacc.com/برنامج-محاسبة/برنامج-نقاط-البيع/">POS System</a> is cloud based that means it is accessible on web and both iOS and Android devices to save the time and boosts performance and productivity.</textarea>
+          <br />
+          <button class="btn btn-primary">Copy</button>
+        </td>
+        <td dir="rtl">
+          <textarea class="form-control">يعتمد <a href="https://www.smacc.com/برنامج-محاسبة/برنامج-نقاط-البيع/">POS System</a> على تقنية السحابة ، مما يعني أنه يمكن الوصول إليه عبر الويب وأجهزة iOS و Android لتوفير الوقت وتعزيز الأداء والإنتاجية.</textarea>
+          <br />
+          <button class="btn btn-primary">Copy</button>
+        </td>
+      </tr>
+      <!-- /row end -->
+      
+      <tr>
+        <td>
+          <textarea class="form-control">Payroll Software</textarea>
+          <br />
+          <button class="btn btn-danger">Copy</button>
+        </td>
+        <td dir="rtl">
+          <textarea class="form-control">برنامج الرواتب</textarea>
+          <br />
+          <button class="btn btn-danger">Copy</button>
+        </td>
+        <td rowspan="2">
+          <textarea class="form-control"><a href="https://www.smacc.com/برنامج-محاسبة/برنامج-الرواتب/">https://www.smacc.com/برنامج-محاسبة/برنامج-الرواتب/</a></textarea>
+            <br />
+          <button class="btn btn-danger">Copy</button>
+        </td>
+      </tr>
+      <!-- /row end -->
+      
+      <tr>
+        <td>
+          <textarea class="form-control"><a href="https://www.smacc.com/برنامج-محاسبة/برنامج-الرواتب/">Payroll Software</a> covers all administrative essentials to manage employees, employees salaries, vacations, pay slips and deductions.</textarea>
+          <br />
+          <button class="btn btn-primary">Copy</button>
+        </td>
+        <td dir="rtl">
+          <textarea class="form-control">غطي نظام إدارة الموارد البشرية و نظام إدارة شؤون الموظفين و <a href="https://www.smacc.com/برنامج-محاسبة/برنامج-الرواتب/">برنامج الرواتب</a> جميع الضروريات الإدارية لإدارة الموظفين ، ورواتب الموظفين ، والإجازات ، والرواتب ، والاستقطاعات</textarea>
+          <br />
+          <button class="btn btn-primary">Copy</button>
+        </td>
+      </tr>
+      <!-- /row end -->
+      
+    </tbody>
+  </table>
 
