--- a/app/assets/stylesheets/deals.css.erb
+++ b/app/assets/stylesheets/deals.css.erb
@@ -73,7 +73,8 @@
   .codes .card_wrap .card .inner>.code_high>p{color:#616161;font-size:13px;display:inline;border-bottom:0.4em solid rgba(51,51,255,0.2);position:relative;}
   .codes .card_wrap .card .inner>.code_high>p>span{position:relative;top:0.4em;}
   .codes .card_wrap .card .inner>.code_high>p>span>strong{font-size:17px;color:#000;font-weight:500;}
-  .codes .card_wrap .card .inner>.code_high>.ex_date{display:block;font-size:13px;color:#616161;margin-bottom:3px;}
+  .codes .card_wrap .card .inner>.code_high>.ex_date{display:block;font-size:13px;color:#000;margin-bottom:3px;}
+  .codes .card_wrap .card .inner>.code_high>.ex_date_new{margin-top:-10px;}
   .codes .card_wrap .card .inner>.code_high>ul{}
   .codes .card_wrap .card .inner>.code_high>ul>li{margin-bottom:10px;}
   .codes .card_wrap .card .inner>.code_high>ul>li>p{font-size:17px;}
@@ -83,8 +84,11 @@
   .codes .card_wrap .card .inner>.code_high>ul>li>ul>li>span{}
   .codes .card_wrap .card .inner>.code_high>ul>li>ul>li>span>em{font-size:11px;text-decoration:line-through;color:#616161;margin-left:1%;}
   .codes .card_wrap .card .deal_btn{float:left;width:20%;text-align:center;margin:60px 1.5% 0 1.5%;}
+  .codes .card_wrap .card .promo_btn{margin-top:90px;}
   .codes .card_wrap .card .deal_btn a{text-decoration:none;color:#000;display:block;font-family: 'Montserrat', sans-serif;font-weight:bold;border:3px solid #000;padding:10px 5px;}
   .codes .card_wrap .card .deal_btn p{color:#ff3333;}
+
+
 }
 
 @media screen and (max-width:640px){
