--- a/app/views/deals/_body_amz_prime.html.erb
+++ b/app/views/deals/_body_amz_prime.html.erb
@@ -16,6 +16,27 @@
   <div class="deal_btn"><a target="_blank" href="product_link">Shop Now at Amazon</a></div>
 </div> -->
 
+
+<div class="card clearfix" data-score="25" data-price="74.25">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2JsAGR8"><img src="https://m.media-amazon.com/images/I/81++H68FAiL._SR400,400_.jpg" alt="" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>141 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>25% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2JsAGR8">Pratt Standard Cocktail Company Old Fashioned Authentic Tonic Syrup for Cocktails, 16oz, Pack of 6 </a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$74.25</span><span class="ori_price">$99.00</span></address>
+      <textarea class="code_area">20OKUSBCABLE</textarea><button class="copycode">Copy</button>
+      <span class="ex_date ex_date_new">Expiration Date : Jul 16, 2019 at 11:59 PM PDT</span>
+      <%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <!-- <textarea class="code_area_sec">20OKUSBCABLE</textarea><button class="copycode_sec">Copy</button> -->
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2JsAGR8">Use Code at Amazon</a></div>
+</div>
+
 <div class="card clearfix" data-score="percentage" data-price="discounted_price">
   <div class="image_box">
     <a target="_blank" href="product_link"><img src="product_img" alt="" /></a>
