--- a/app/views/deals/_body_amz_prime.html.erb
+++ b/app/views/deals/_body_amz_prime.html.erb
@@ -28,7 +28,7 @@
     <p><a target="_blank" href="https://amzn.to/2JsAGR8">Pratt Standard Cocktail Company Old Fashioned Authentic Tonic Syrup for Cocktails, 16oz, Pack of 6 </a></p>
     <div class="code_high">
       <address><span class="dis_price">$74.25</span><span class="ori_price">$99.00</span></address>
-      <textarea class="code_area">20OKUSBCABLE</textarea><button class="copycode">Copy</button>
+      <textarea readonly="readonly" class="code_area">20OKUSBCABLE</textarea><button class="copycode">Copy</button>
       <span class="ex_date ex_date_new">Expiration Date : Jul 16, 2019 at 11:59 PM PDT</span>
       <%= render 'deals/notes' %>
     </div>
