--- a/app/views/deals/_body_promocode.html.erb
+++ b/app/views/deals/_body_promocode.html.erb
@@ -29,7 +29,7 @@
     <p><a target="_blank" href="product_link">prodcut_description</a></p>
     <div class="code_high">
       <address><span class="dis_price">$discounted_price</span><span class="ori_price">$Origianl_price</span></address>
-      <textarea class="code_area">promo_code</textarea><button class="copycode">Copy</button>
+      <textarea readonly="readonly" class="code_area">promo_code</textarea><button class="copycode">Copy</button>
       <span class="ex_date ex_date_new">Expiration Date : End_date</span>
       <%= render 'deals/notes' %>
     </div>
